Docker, docker-compose
Headers for Docker and Docker-Compose (To do: fill these sections with the scripts I use in command line to boot docker containers and multi-container applications)

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,15 @@
 # Build test for JAVASCRIPT
 # (uncomment the following and comment the lines which correspond to other languages).
 # ------------------------------------------------------------------------------
+
+
+# -----------------------------------------------------------------------------
+# Build test for DOCKER
+# (uncomment the following and comment the lines which correspond to other languages).
+# ------------------------------------------------------------------------------
+
+
+# -----------------------------------------------------------------------------
+# Build test for DOCKER-COMPOSE
+# (uncomment the following and comment the lines which correspond to other languages).
+# ------------------------------------------------------------------------------
