--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@
 # (uncomment the following and comment the lines which correspond to other languages).
 # ------------------------------------------------------------------------------
 
-# language: php
-# php:
-#   - '5.4'
-#   - '5.5'
-#   - '5.6'
-#   - '7.0'
-#   - hhvm
-#   - nightly
+language: php
+php:
+  - '5.4'
+  - '5.5'
+  - '5.6'
+  - '7.0'
+  - hhvm
+  - nightly
 
 
 # -----------------------------------------------------------------------------
