--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "description": "A platform for e-health and e-medicine",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-uglify": "^1.5.3",
-    "grunt": "^0.4.5"
-  },
   "devDependencies": {
-    "gulp-imagemin": "^2.4.0"
+    "grunt": "^0.4.5",
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-uglify": "^1.5.3",
+    "mysql": "^2.10.2",
+    "php-js": "0.0.5",
+    "sqlite3": "^3.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
