Updating Docker projects' documentation and change 'src' to 'dist' in COPY commands in Dockerfiles

--- a/docker_solutions/docker_1_NO_DOCKER_COMPOSE_(custom LEMP)/Dockerfile
+++ b/docker_solutions/docker_1_NO_DOCKER_COMPOSE_(custom LEMP)/Dockerfile
@@ -27,7 +27,7 @@ RUN apt-get -y install sqlite curl
 #ADD nginx.conf /etc/nginx
 
 # Copy the web application's content on nginx server root directory:
-COPY ../src /usr/share/nginx/html
+COPY dist /usr/share/nginx/html
 # Create also a mount point for the directory above:
 VOLUME ["/usr/share/nginx/html"]
 
