--- a/docker_solutions/docker_2_NO_DOCKER_COMPOSE_(bitnami_LEMP)/Dockerfile
+++ b/docker_solutions/docker_2_NO_DOCKER_COMPOSE_(bitnami_LEMP)/Dockerfile
@@ -6,7 +6,7 @@
 #
 # ------------------------------------------------------
 
-FROM phpmyadmin/phpmyadmin:latest
+FROM bitnami/nginx
 MAINTAINER Alex Karadimos
 
-EXPOSE 80 443
+COPY dist /app
