--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.1",
+    "mocha": "^2.4.5",
     "mysql": "^2.10.2",
     "php-js": "0.0.5",
     "sqlite3": "^3.1.1"
