Updating JSON values

--- a/src/services/patient-med-profile/js/measurements.json
+++ b/src/services/patient-med-profile/js/measurements.json
@@ -1,94 +1,94 @@
 {
     "Body Measurements": {
-        "Body Fata Percentage": "measurement_includes/BodyMeasurements/",
-        "Body Mass Index": "measurement_includes/BodyMeasurements/",
-        "Height": "measurement_includes/BodyMeasurements/",
-        "Lean Body Mass": "measurement_includes/BodyMeasurements/",
-        "Weight": "measurement_includes/BodyMeasurements/"
+        "Body Fat Percentage": "measurement_includes/BodyMeasurements/bodyfat.php",
+        "Body Mass Index": "measurement_includes/BodyMeasurements/bmi.php",
+        "Height": "measurement_includes/BodyMeasurements/height.php",
+        "Lean Body Mass": "measurement_includes/BodyMeasurements/lbm.php",
+        "Weight": "measurement_includes/BodyMeasurements/weight.php"
     },
     "Fitness": {
-        "Active Energy": "measurement_includes/Fitness/",
-        "Cycling Distance": "measurement_includes/Fitness/",
-        "Flights Climbed": "measurement_includes/Fitness/",
-        "Nike Plus": "measurement_includes/Fitness/",
-        "Resting Energy": "measurement_includes/Fitness/",
-        "Stand Hours": "measurement_includes/Fitness/",
-        "Steps": "measurement_includes/Fitness/",
-        "Working & Running Distance": "measurement_includes/Fitness/",
-        "Workouts": "measurement_includes/Fitness/"
+        "Active Energy": "measurement_includes/Fitness/activenergy.php",
+        "Cycling Distance": "measurement_includes/Fitness/cycling.php",
+        "Flights Climbed": "measurement_includes/Fitness/flights.php",
+        "Nike Plus": "measurement_includes/Fitness/nikeplus.php",
+        "Resting Energy": "measurement_includes/Fitness/resting.php",
+        "Stand Hours": "measurement_includes/Fitness/standhours.php",
+        "Steps": "measurement_includes/Fitness/steps.php",
+        "Walking & Running Distance": "measurement_includes/Fitness/walkrundist.php",
+        "Workouts": "measurement_includes/Fitness/workouts.php"
     },
     "Me": {
-        "Blood Type": "measurement_includes/Me/",
-        "Fitzpatrick Skin Type": "measurement_includes/Me/",
+        "Blood Type": "measurement_includes/Me/bloodtype.php",
+        "Fitzpatrick Skin Type": "measurement_includes/Me/fitzpatrick.php"
     },
     "Nutrition": {
-        "Biotin": "measurement_includes/Nutrition/",
-        "Caffeine": "measurement_includes/Nutrition/",
-        "Calcium": "measurement_includes/Nutrition/",
-        "Carbohyfrates": "measurement_includes/Nutrition/",
-        "Chloride": "measurement_includes/Nutrition/",
-        "Chromium": "measurement_includes/Nutrition/",
-        "Copper": "measurement_includes/Nutrition/",
-        "Dietary Calories": "measurement_includes/Nutrition/",
-        "Dietary Cholesterol": "measurement_includes/Nutrition/",
-        "Dietary Sugar": "measurement_includes/Nutrition/",
-        "Fibre": "measurement_includes/Nutrition/",
-        "Folate": "measurement_includes/Nutrition/",
-        "Iodine": "measurement_includes/Nutrition/",
-        "Magnesium": "measurement_includes/Nutrition/",
-        "Manganese": "measurement_includes/Nutrition/",
-        "Molybdenum": "measurement_includes/Nutrition/",
-        "Monounsaturated Fat": "measurement_includes/Nutrition/",
-        "Niacin": "measurement_includes/Nutrition/",
-        "Pantothenic Acid": "measurement_includes/Nutrition/",
-        "Phosphorus": "measurement_includes/Nutrition/",
-        "Polyunsaturated Fat": "measurement_includes/Nutrition/",
-        "Potassium": "measurement_includes/Nutrition/",
-        "Protein": "measurement_includes/Nutrition/",
-        "Riboflavin": "measurement_includes/Nutrition/",
-        "Saturated Fat": "measurement_includes/Nutrition/",
-        "Selenium": "measurement_includes/Nutrition/",
-        "Sodium": "measurement_includes/Nutrition/",
-        "Thiamine": "measurement_includes/Nutrition/",
-        "Total Fat": "measurement_includes/Nutrition/",
-        "Vitamin A": "measurement_includes/Nutrition/",
-        "Vitamin B12": "measurement_includes/Nutrition/",
-        "Vitamin B6": "measurement_includes/Nutrition/",
-        "Vitamin C": "measurement_includes/Nutrition/",
-        "Vitamin D": "measurement_includes/Nutrition/",
-        "Vitamin E": "measurement_includes/Nutrition/",
-        "Vitamin K": "measurement_includes/Nutrition/",
-        "Water": "measurement_includes/Nutrition/",
-        "Zinc": "measurement_includes/Nutrition/"
+        "Biotin": "measurement_includes/Nutrition/biotin.php",
+        "Caffeine": "measurement_includes/Nutrition/caffeine.php",
+        "Calcium": "measurement_includes/Nutrition/calcium.php",
+        "Carbohyfrates": "measurement_includes/Nutrition/carbohyfrates.php",
+        "Chloride": "measurement_includes/Nutrition/chloride.php",
+        "Chromium": "measurement_includes/Nutrition/chromium.php",
+        "Copper": "measurement_includes/Nutrition/copper.php",
+        "Dietary Calories": "measurement_includes/Nutrition/calories.php",
+        "Dietary Cholesterol": "measurement_includes/Nutrition/cholesterol.php",
+        "Dietary Sugar": "measurement_includes/Nutrition/sugar.php",
+        "Fibre": "measurement_includes/Nutrition/fibre.php",
+        "Folate": "measurement_includes/Nutrition/folate.php",
+        "Iodine": "measurement_includes/Nutrition/iodine.php",
+        "Magnesium": "measurement_includes/Nutrition/magnesium.php",
+        "Manganese": "measurement_includes/Nutrition/manganese.php",
+        "Molybdenum": "measurement_includes/Nutrition/molybdenum.php",
+        "Monounsaturated Fat": "measurement_includes/Nutrition/monounsaturatedfat.php",
+        "Niacin": "measurement_includes/Nutrition/niacin.php",
+        "Pantothenic Acid": "measurement_includes/Nutrition/pantothenicacid.php",
+        "Phosphorus": "measurement_includes/Nutrition/phosphorus.php",
+        "Polyunsaturated Fat": "measurement_includes/Nutrition/polyunsaturatedfat.php",
+        "Potassium": "measurement_includes/Nutrition/potassium.php",
+        "Protein": "measurement_includes/Nutrition/protein.php",
+        "Riboflavin": "measurement_includes/Nutrition/riboflavin.php",
+        "Saturated Fat": "measurement_includes/Nutrition/saturatedfat.php",
+        "Selenium": "measurement_includes/Nutrition/selenium.php",
+        "Sodium": "measurement_includes/Nutrition/sodium.php",
+        "Thiamine": "measurement_includes/Nutrition/thiamine.php",
+        "Total Fat": "measurement_includes/Nutrition/totalfat.php",
+        "Vitamin A": "measurement_includes/Nutrition/vitA.php",
+        "Vitamin B12": "measurement_includes/Nutrition/vitB12.php",
+        "Vitamin B6": "measurement_includes/Nutrition/vitB6",
+        "Vitamin C": "measurement_includes/Nutrition/vitC.php",
+        "Vitamin D": "measurement_includes/Nutrition/vitD.php",
+        "Vitamin E": "measurement_includes/Nutrition/vitE.php",
+        "Vitamin K": "measurement_includes/Nutrition/vitK.php",
+        "Water": "measurement_includes/Nutrition/water.php",
+        "Zinc": "measurement_includes/Nutrition/zinc.php"
     },
     "Reproductive Health": {
-        "Basal Body Temperature": "measurement_includes/ReproductiveHealth/",
-        "Cervical Mucus Quality": "measurement_includes/ReproductiveHealth/",
-        "Menstruation": "measurement_includes/ReproductiveHealth/",
-        "Ovulation Test Result": "measurement_includes/ReproductiveHealth/",
-        "Sexual Activity": "measurement_includes/ReproductiveHealth/",
-        "Spotting": "measurement_includes/ReproductiveHealth/"
+        "Basal Body Temperature": "measurement_includes/ReproductiveHealth/bbt.php",
+        "Cervical Mucus Quality": "measurement_includes/ReproductiveHealth/cmquality.php",
+        "Menstruation": "measurement_includes/ReproductiveHealth/menstruation.php",
+        "Ovulation Test Result": "measurement_includes/ReproductiveHealth/ovulationtest.php",
+        "Sexual Activity": "measurement_includes/ReproductiveHealth/sexactivity.php",
+        "Spotting": "measurement_includes/ReproductiveHealth/spotting.php"
     },
     "Results": {
-        "Blood Alcohol Content": "measurement_includes/Results/",
-        "Blood Glucose": "measurement_includes/Results/",
-        "Electrodermal Activity": "measurement_includes/Results/",
-        "Forced Expiratory Volume 1 second": "measurement_includes/Results/",
-        "Forced Vital Capacity": "measurement_includes/Results/",
-        "Inhaler Usage": "measurement_includes/Results/",
-        "Number of Times Fallen": "measurement_includes/Results/",
-        "Oxygen Saturation": "measurement_includes/Results/",
-        "Peak Expiratory Flow": "measurement_includes/Results/",
-        "Peripheral Perfusion Index": "measurement_includes/Results/",
-        "UV Index": "measurement_includes/Results/"
+        "Blood Alcohol Content": "measurement_includes/Results/bloodalcohol.php",
+        "Blood Glucose": "measurement_includes/Results/bloodglucose.php",
+        "Electrodermal Activity": "measurement_includes/Results/electrodermal.php",
+        "Forced Expiratory Volume 1 second": "measurement_includes/Results/fev1s.php",
+        "Forced Vital Capacity": "measurement_includes/Results/fvc.php",
+        "Inhaler Usage": "measurement_includes/Results/inhaler.php",
+        "Number of Times Fallen": "measurement_includes/Results/timesfallen.php",
+        "Oxygen Saturation": "measurement_includes/Results/o2saturation.php",
+        "Peak Expiratory Flow": "measurement_includes/Results/pef.php",
+        "Peripheral Perfusion Index": "measurement_includes/Results/ppi.php",
+        "UV Index": "measurement_includes/Results/uvindex.php"
     },
     "Sleep": {
-        "Sleep Analysis": "measurement_includes/Sleep/"
+        "Sleep Analysis": "measurement_includes/Sleep/analysis.php"
     },
     "Vitals": {
-        "Blood Pressure": "measurement_includes/Vitals/",
-        "Body Temperature": "measurement_includes/Vitals/",
-        "Heart Rate": "measurement_includes/Vitals/",
-        "Respiratory Rate": "measurement_includes/Vitals/"
+        "Blood Pressure": "measurement_includes/Vitals/bloodpressure.php",
+        "Body Temperature": "measurement_includes/Vitals/bodytemp.php",
+        "Heart Rate": "measurement_includes/Vitals/heartrate.php",
+        "Respiratory Rate": "measurement_includes/Vitals/respiratoryrate.php"
     }
 }
