--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "A platform for e-health and e-medicine",
   "main": "gulpfile.js",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "del": "^2.2.0",
     "grunt": "^0.4.5",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.6",
-    "gulp-imagemin": "^2.4.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.1",
     "mysql": "^2.10.2",
     "php-js": "0.0.5",
-    "sqlite3": "^3.1.1"
+    "sqlite3": "^3.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
