--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "del": "^2.2.0",
+    "del": "^2.2.1",
     "grunt": "^0.4.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.0.6",
-    "gulp-imagemin": "^3.0.1",
+    "gulp-clean-css": "^2.0.11",
+    "gulp-imagemin": "^3.0.2",
     "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
-    "mocha": "^2.5.1",
-    "mysql": "^2.10.2",
+    "mocha": "^2.5.3",
+    "mysql": "^2.11.1",
     "php-js": "0.0.5",
     "sqlite3": "^3.1.4"
   },
@@ -28,8 +28,9 @@
     "url": "https://github.com/karadalex/eHOSP_Server_MainSource.git"
   },
   "author": "Alex Karadimos",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/karadalex/eHOSP_Server_MainSource/issues"
-  }
+  },
+  "dependencies": {}
 }
