--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ composer.phar
 # Ignore automatically Generated Files
 src/config.php
 src/settings.php
+
+# Ignore automatically generated builds (generated with Gulp)
+dist/
