--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "chalk": "^1.1.3",
     "del": "^2.2.1",
+    "eslint": "^3.1.1",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-standard": "^2.0.0",
     "grunt": "^0.4.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -18,6 +23,7 @@
     "mocha": "^2.5.3",
     "mysql": "^2.11.1",
     "php-js": "0.0.5",
+    "shelljs": "^0.7.1",
     "sqlite3": "^3.1.4"
   },
   "scripts": {
