Improved HTTP Response headers after testing web application with https://securityheaders.io

--- a/public/web.config
+++ b/public/web.config
@@ -19,5 +19,17 @@
         </rule>
       </rules>
     </rewrite>
+
+    <httpProtocol>
+        <customHeaders>
+            <remove name="X-Powered-By" />
+            <remove name="Server" />
+            <add name="X-Content-Type-Options" value="nosniff" />
+            <add name="X-XSS-Protection" value="1; mode=block" />
+            <add name="x-frame-options" value="SAMEORIGIN" />
+            <add name="Content-Security-Policy" value="script-src 'self'" />
+            <add name="strict-transport-security" value="max-age=31536000; includeSubdomains" />
+        </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
