Added more allowed script sources (CDN) in Content Security Policy header

--- a/public/web.config
+++ b/public/web.config
@@ -27,7 +27,7 @@
             <add name="X-Content-Type-Options" value="nosniff" />
             <add name="X-XSS-Protection" value="1; mode=block" />
             <add name="x-frame-options" value="SAMEORIGIN" />
-            <add name="Content-Security-Policy" value="script-src 'self'" />
+            <add name="Content-Security-Policy" value="script-src 'self' cdnjs.cloudflare.com npmcdn.com" />
             <add name="strict-transport-security" value="max-age=31536000; includeSubdomains" />
         </customHeaders>
     </httpProtocol>
