Changed to default src, added fonts uris

--- a/public/web.config
+++ b/public/web.config
@@ -27,7 +27,14 @@
             <add name="X-Content-Type-Options" value="nosniff" />
             <add name="X-XSS-Protection" value="1; mode=block" />
             <add name="x-frame-options" value="SAMEORIGIN" />
-            <add name="Content-Security-Policy" value="default-src 'self' cdnjs.cloudflare.com npmcdn.com *.tile.osm.org" />
+            <add name="Content-Security-Policy" value="default-src
+                                                        'self'
+                                                        'unsafe-inline'
+                                                        cdnjs.cloudflare.com
+                                                        npmcdn.com
+                                                        http://*.tile.osm.org
+                                                        https://fonts.googleapis.com
+                                                        https://fonts.gstatic.com;" />
             <add name="strict-transport-security" value="max-age=31536000; includeSubdomains" />
         </customHeaders>
     </httpProtocol>
