removed data from CSP

--- a/public/web.config
+++ b/public/web.config
@@ -29,6 +29,7 @@
             <add name="x-frame-options" value="SAMEORIGIN" />
             <add name="Content-Security-Policy" value="default-src
                                                         'self'
+                                                        data:
                                                         'unsafe-inline'
                                                         cdnjs.cloudflare.com
                                                         npmcdn.com
