Make manifest.json recognizable by the server and the browser

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/ico"
     }
   ],
-  "start_url": "index.php?launcher=true",
+  "start_url": "/",
   "theme_color": "#2bb673",
   "background_color": "#ebebeb"
 }
