--- a/public/web.config
+++ b/public/web.config
@@ -39,5 +39,10 @@
             <add name="strict-transport-security" value="max-age=31536000; includeSubdomains" />
         </customHeaders>
     </httpProtocol>
+
+    <staticContent>
+        <remove fileExtension=".json"/>
+        <mimeMap fileExtension=".json" mimeType="application/manifest+json"/>
+    </staticContent>
   </system.webServer>
 </configuration>
