--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,50 @@
 {
-  "short_name": "eHOSP",
-  "name": "eHOSP Cloud Hospital",
-  "display": "standalone",
-  "icons": [
+    "short_name": "eHOSP",
+    "name": "eHOSP Cloud Hospital",
+    "display": "standalone",
+    "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "48x48",
-      "type": "image/ico"
-    }
-  ],
-  "start_url": "/",
-  "theme_color": "#2bb673",
-  "background_color": "#ebebeb"
+        "src": "img/16x16.png",
+        "sizes": "16x16",
+        "type": "image/png"
+    },
+    {
+        "src": "img/24x24.png",
+        "sizes": "24x24",
+        "type": "image/png"
+    },
+    {
+        "src": "img/32x32.png",
+        "sizes": "32x32",
+        "type": "image/png"
+    },
+    {
+        "src": "img/48x48.png",
+        "sizes": "48x48",
+        "type": "image/png"
+    },
+    {
+        "src": "img/64x64.png",
+        "sizes": "64x64",
+        "type": "image/png"
+    },
+    {
+        "src": "img/96x96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+    },
+    {
+        "src": "img/128x128.png",
+        "sizes": "128x128",
+        "type": "image/png"
+    },
+    {
+        "src": "img/256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    },
+    ],
+    "start_url": "/",
+    "theme_color": "#2bb673",
+    "background_color": "#ebebeb"
 }
