--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.0",
-    "leaflet": "^0.7.7"
+    "leaflet": "^0.7.7",
+    "axios": "^0.16.2"
   }
 }
