--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "simplesoftwareio/simple-qrcode": "~1",
-        "laravel/passport": "^1.0",
+        "laravel/passport": "^2.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "filp/whoops": "~2.0",
+        "laravel/dusk": "^2.0"
     },
     "autoload": {
         "classmap": [
