--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover",
+            "@php artisan voyager:install"
         ]
     },
     "config": {
