--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ehosp-services
-DB_USERNAME=username
-DB_PASSWORD=password
+DB_USERNAME=travis
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
