Start a MySQL instance

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ php:
 addons:
    chrome: stable
 
+services:
+  - mysql
+
 install:
    - mv .env.example .env
    - travis_retry composer install --no-interaction --prefer-dist --no-suggest
