--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,14 @@ addons:
 services:
   - mysql
 
+before_install:
+  - mysql -e 'CREATE DATABASE ehosp-services;'
+
 install:
    - mv .env.example .env
    - travis_retry composer install --no-interaction --prefer-dist --no-suggest
    - php artisan key:generate
+   - php artisan db:seed
 
 before_script:
    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
