--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
   - mysql
 
 before_install:
-  - mysql -e 'CREATE DATABASE ehosp-services;'
+  - mysql -e 'CREATE DATABASE `ehosp-services`;'
 
 install:
    - mv .env.example .env
