--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
    - mv .env.example .env
    - travis_retry composer install --no-interaction --prefer-dist --no-suggest
    - php artisan key:generate
+   - php artisan voyager:install
 
 before_script:
    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
