--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover",
-            "@php artisan voyager:install"
+            "@php artisan package:discover"
         ]
     },
     "config": {
