Travis integration with Code CLimate (CC_TEST_REPORTER_ID environment variable is already set on travis service)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,15 @@ install:
    - php artisan voyager:install
 
 before_script:
+   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+   - chmod +x ./cc-test-reporter
+   - ./cc-test-reporter before-build
    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
    - php artisan serve &
 
 script:
    - php artisan dusk
-   - phpunit
+   - phpunit --coverage-clover=clover.xml
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
