--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,7 @@ language: php
 php:
 	- 7.1.9
 
-cache:
-	yarn: true
-	directories:
-		- $HOME/.composer/cache
+cache: yarn
 
 addons:
 	chrome: stable
