--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ language: php
 php:
   - 7.1.9
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=$CC_TEST_REPORTER_ID
+
 cache:
   yarn: true
   directories:
